--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./test.css">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
 <section id="userSpeak"></section>
@@ -12,7 +18,6 @@
 <script>
   new UserSpeak({
     sid: 'speak',
-    num: 10,
     config: {
       syncURL: 'https://wd0126581988dtadhd.wilddogio.com'
     }
