--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="https://zhangyuhan2016.github.io/static/css/userSpeak.css">
     <style>
         body {
             display: flex;
@@ -13,8 +13,8 @@
 </head>
 <body>
 <section id="userSpeak"></section>
-<script src="https://cdn.wilddog.com/sdk/js/2.5.8/wilddog.js"></script>
-<script src="./userSpeak.js"></script>
+<script src="https://cdn.wilddog.com/sdk/js/2.5.8/wilddog.js" crossorigin="anonymous"></script>
+<script src="https://zhangyuhan2016.github.io/static/js/userSpeak.js"></script>
 <script>
       new UserSpeak({
         sid: 'speak',
