--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
 <body>
 <section id="userSpeak"></section>
 <script src="https://cdn.wilddog.com/sdk/js/2.5.8/wilddog.js" crossorigin="anonymous"></script>
-<script src="https://zhangyuhan2016.github.io/static/js/userSpeak.js"></script>
+<script src="https://zhangyuhan2016.github.io/static/js/userSpeak.js" crossorigin="anonymous"></script>
 <script>
       new UserSpeak({
         sid: 'speak',
